fix(domain): align module config and evolution authority